src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>RecurringMethod__c</fullName>
        <description>Whether a recurring payment will be made as installments against a total amount (&quot;pledge amount&quot;) or as a subscription of a certain amount each month.</description>
        <inlineHelpText>Whether a recurring payment will be made as installments against a total amount (&quot;pledge amount&quot;) or as a subscription of a certain amount each month.</inlineHelpText>
        <label>RecurringMethod</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person in charge of soliciting this major donation or grant.</description>
        <inlineHelpText>The person in charge of soliciting this major donation or grant.</inlineHelpText>
        <label>Solicitor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Solicitor)</relationshipLabel>
        <relationshipName>Contributions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date payments for a pledge begin</description>
        <inlineHelpText>Date payments for a pledge begin</inlineHelpText>
        <label>Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Supervisor_Satisfaction__c</fullName>
        <description>How satisfied was the supervisor with the volunteer&apos;s work?</description>
        <inlineHelpText>How satisfied was the supervisor with the volunteer&apos;s work?</inlineHelpText>
        <label>Supervisor Satisfaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Inadequate</fullName>
                </value>
                <value>
                    <fullName>2 - Okay</fullName>
                </value>
                <value>
                    <fullName>3 - Good</fullName>
                </value>
                <value>
                    <fullName>4 - Excellent</fullName>
                </value>
                <value>
                    <fullName>5 - Amazing!</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who supervises or supervised this contact in their volunteer work?</inlineHelpText>
        <label>Supervisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Supervisor)</relationshipLabel>
        <relationshipName>Contributions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Deductible_Amount__c</fullName>
        <description>The portion of a payment which is truly a donation and can be deducted from taxes.</description>
        <inlineHelpText>The portion of a payment which is truly a donation and can be deducted from taxes.  For example, if tickets to your annual dinner cost $100, and the dinner is worth $25 a plate, then the Tax Deductible Amount of tickets is $75.</inlineHelpText>
        <label>Tax Deductible Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tickets__c</fullName>
        <label>Tickets</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Today_Text_Contribs__c</fullName>
        <formula>CASE(MONTH(TODAY()), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot; &quot; + 
TEXT(DAY(TODAY())) 
+ &quot;, &quot; + TEXT(YEAR(TODAY()))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today Text Contribs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Amount  +  Challenge_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_CnP__c</fullName>
        <description>Total paid against this pledge as reported by Click and Pledge.</description>
        <inlineHelpText>Total paid against this pledge as reported by Click and Pledge.</inlineHelpText>
        <label>Total_Paid_CnP</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <description>Total paid against this pledge or challenge.  This field is auto-calculated each time a new payment is entered.</description>
        <inlineHelpText>Total paid against this pledge or challenge.  This field is auto-calculated each time a new payment is entered.</inlineHelpText>
        <label>Total_Paid</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_of_Hours__c</fullName>
        <formula>Hourly_Rate_for_Vol_Task__c * Hours_Actual__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value of Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volunteer_Narrative_Feedback__c</fullName>
        <label>Volunteer_Narrative_Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contributions</label>
    </listViews>
    <listViews>
        <fullName>All_Opportunities_w_Primary_Contributor</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Opportunities w/Primary Contributor</label>
    </listViews>
    <listViews>
        <fullName>Challenge_and_Pledge_Gifts</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Challenge,Opportunity.Pledge</value>
        </filters>
        <label>Challenge and Pledge Gifts</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Membership_Gifts</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Membership</value>
        </filters>
        <label>Membership Gifts</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contributions</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Challenge</fullName>
        <active>true</active>
        <businessProcess>Challenge</businessProcess>
        <description>Donations that challenge you to match them with other donations.</description>
        <label>Challenge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Donations that don&apos;t involve a personal solicitation like a phone call or visit.  (Donations from appeal letters, for example.)</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <businessProcess>Payment For Goods Or Services</businessProcess>
        <description>Donation for an event</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Grant</businessProcess>
        <description>Use this record type for grant applications</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>InKind</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <label>InKind</label>
    </recordTypes>
    <recordTypes>
        <fullName>Major_Donation</fullName>
        <active>true</active>
        <businessProcess>Major Donation</businessProcess>
        <description>Major financial donations that you personally ask for via  phone call or visit.  Can include corporate donations.</description>
        <label>Major Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Membership</businessProcess>
        <description>Use this record type for memberships</description>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pledge</fullName>
        <active>true</active>
        <businessProcess>Pledge</businessProcess>
        <description>Record a pledge</description>
        <label>Pledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <businessProcess>Payment For Goods Or Services</businessProcess>
        <description>Payment for goods or services, such as a workshop or t-shirt.</description>
        <label>Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Volunteer_Task</fullName>
        <active>true</active>
        <businessProcess>Volunteer_Task</businessProcess>
        <label>Volunteer Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Must_enter_a_primary_campaign_source</fullName>
        <active>true</active>
        <description>On entering a contribution, must enter a primary campaign source</description>
        <errorConditionFormula>ISBLANK( CampaignId )</errorConditionFormula>
        <errorDisplayField>CampaignId</errorDisplayField>
        <errorMessage>Please enter the name of the campaign activity from which this contribution came.  In a pinch, you can use &quot;Unknown&quot; or &quot;Individual Initiative&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_fill_in_Primary_Contact</fullName>
        <active>true</active>
        <description>If Primary Contact left blank</description>
        <errorConditionFormula>ISNULL( Contact__c )</errorConditionFormula>
        <errorMessage>Please enter a Primary Contributor.  (This is the person the Thank You letter will go to.)</errorMessage>
    </validationRules>
</CustomObject>